[feed] add pagination, filters
